--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -6,6 +6,7 @@
 @theme static {
   --font-sans: 'Public Sans', sans-serif;
   --font-serif: 'Instrument Serif', serif;
+  --font-alegreya: 'Alegreya', serif;
 }
 
 :root {
